--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-component": "^1.1.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.0",
     "css-loader": "^3.4.2",
@@ -22,6 +23,8 @@
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "mockjs": "^1.1.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "svg-sprite-loader": "^4.2.1",
     "url-loader": "^3.0.0",
@@ -36,6 +39,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "element-ui": "^2.13.0",
-    "vue": "^2.6.11"
+    "qs": "^6.9.1",
+    "vue": "^2.6.11",
+    "vuex": "^3.1.2"
   }
 }
